fixed collapse/expanding function

--- a/dashboard.css
+++ b/dashboard.css
@@ -56,7 +56,8 @@ body {
 
 /* TOGGLE ICON */
 .toggle {
-    font-size: 16px;
+    font-size: 36px;
+    font-weight: bold;
     color: #aaa;
 }
 
